2017-06-09  Ryosuke Niwa  <rniwa@webkit.org>

        didMoveToNewDocument doesn't get called on an Attr inside a shadow tree
        https://bugs.webkit.org/show_bug.cgi?id=173133

        Reviewed by Antti Koivisto.

        Added a regression test for moving a shadow tree with an Attr node across a document.
        The test hits an assertion in a debug build and fails in a release build without the fix.

        * fast/dom/adopt-attr-with-shadow-tree-expected.txt: Added.
        * fast/dom/adopt-attr-with-shadow-tree.html: Added.

2017-06-11  Keith Miller  <keith_miller@apple.com>

        TypedArray constructor with string shouldn't throw
        https://bugs.webkit.org/show_bug.cgi?id=173181

        Reviewed by JF Bastien.

        Update tests to allow null buffers.

        * fast/canvas/webgl/array-unit-tests-expected.txt:
        * fast/canvas/webgl/array-unit-tests.html:
        * fast/canvas/webgl/webgl-array-invalid-ranges-expected.txt:
        * fast/canvas/webgl/webgl-array-invalid-ranges.html:
        * webgl/1.0.2/resources/webgl_test_files/conformance/typedarrays/array-unit-tests.html:

2017-06-11  Antoine Quint  <graouts@apple.com>

        Rebaseline media/modern-media-controls/scrubber
        https://bugs.webkit.org/show_bug.cgi?id=173212

        Reviewed by Jon Lee.

        Remove a media/modern-media-controls/scrubber test that is no longer relevant now that there is no standalone scrubber class.

        * media/modern-media-controls/scrubber/scrubber-expected.txt: Removed.
        * media/modern-media-controls/scrubber/scrubber.html: Removed.
        * platform/ios-simulator/TestExpectations:
        * platform/mac/TestExpectations:

2017-06-11  Antoine Quint  <graouts@apple.com>

        Enable media/modern-media-controls/scheduler
        https://bugs.webkit.org/show_bug.cgi?id=173211

        Reviewed by Jon Lee.

        * platform/ios-simulator/TestExpectations:
        * platform/mac/TestExpectations:
